# projeto-01-EDI

./: .gitignore  CMakeLists.txt  LEIA-ME.txt  README.md  arena.c  arena.h  carregadores.c  carregadores.h  chao.c  chao.h  circulo.c  circulo.h  clear  disparador.c  disparador.h  fila.c  fila.h  linha.c  linha.h  main.c  pilha.c  pilha.h  retangulo.c  retangulo.h  texto.c  texto.h
include/: arena.h  carregadores.h  chao.h  disparador.h  sobreposicao.h
saida/: t-1retg-cres-2-dspcentro-2-chaco.txt
src/: arena.c  arena.h  carregadores.c  carregadores.h  chao.c  chao.h  circulo.c  circulo.h  disparador.c  disparador.h  fila.c  fila.h  formas.c  formas.h  linha.c  linha.h  main.c  makefile  pilha.c  pilha.h  processaGeo.c  processaGeo.h  processaQry.c  processaQry.h  retangulo.c  retangulo.h  run.sh  sobreposicao.c  sobreposicao.h  svg.c  svg.h  texto.c  texto.h
testes/: t-0retg-cres.geo  t-0retg-decres.geo  t-0rets-circs-cres.geo  t-1retg-cres-2.geo  t-2figs-alet.geo
testes/t-0retg-cres/: d1-seq-raj.qry  dsp-cruz-alt.qry
testes/t-0retg-decres/: d1-seq-raj.qry  disp-cruz.qry
testes/t-0rets-circs-cres/: d1-seq-raj.qry
testes/t-1retg-cres-2/: dspcentro-2-chaco.qry  dspcentro-2.qry
testes/t-2figs-alet/: d2-1x1-norte.qry  d2-1x1-oeste.qry  d2-3x3-lll.qry  d2-3x3-nol.qry  d2-3x3-norte-longe.qry  d2-3x3-norte-prox.qry  d2-3x3-oeste-longe.qry  d2-3x3-oeste-prox.qry  d2-norte-10x7-chaco.qry  d2-oeste-10x7-chaco.qry
