cmake_minimum_required(VERSION 3.31)
project(EDI_projeto1 C)

set(CMAKE_C_STANDARD 99)

add_executable(EDI_projeto1
        pilha.c
        pilha.h
        fila.c
        fila.h
        circulo.c
        circulo.h
        retangulo.c
        retangulo.h
        linha.c
        linha.h
        texto.c
        texto.h)
